# flag

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
flag/: __init__.py
src/flag/: __init__.py
src/tests/: testFlags.py
