[metadata]
name = flag
version = 1.0.0
author = m4reQ
description = A python library that helps with dealing with command line flag arguments.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/m4reQ/flag
project_urls = 
    Bug Tracker = https://github.com/m4reQ/flag/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src